--- a/Parcour/Parcour/ParcourFront/ParcourFront.csproj
+++ b/Parcour/Parcour/ParcourFront/ParcourFront.csproj
@@ -111,6 +111,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DataBase.cs" />
     <Compile Include="InputCityName.xaml.cs">
       <DependentUpon>InputCityName.xaml</DependentUpon>
     </Compile>
