Fixation d'un bug provoquant un conflit losrs de la sélection des villes

--- a/Parcour/Parcour/ParcourFront/ParcourFront.csproj
+++ b/Parcour/Parcour/ParcourFront/ParcourFront.csproj
@@ -111,10 +111,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="InputCityName.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <Compile Include="SelectCityName.xaml.cs">
+      <DependentUpon>SelectCityName.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -124,13 +123,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DataBase.cs" />
-    <Compile Include="InputCityName.xaml.cs">
-      <DependentUpon>InputCityName.xaml</DependentUpon>
-    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SelectCityName.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
